Fixed horizontal scroll issue on webpage

--- a/wwwroot/amaysimStyle.css
+++ b/wwwroot/amaysimStyle.css
@@ -2,6 +2,7 @@ body {
   background-color: white;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: smaller;
+  overflow-x: hidden;
 }
 
 tr,
